# cinematacms

./: .gitignore  Makefile  pyproject.toml  requirements.txt  restart_script.sh  rollback.sh
.github/workflows/: ci.yml  dependabot-check.yml  deploy-dev.yml
cms/: ci_settings.py  settings.py  ui_variant.py
cms/tests/: test_whisper.py
docs/: index.md
docs/customization/: frontend-development.md
docs/features/: tinymce.md
docs/technical/: FRONTEND_WORKFLOW.md  ui-variant-gate-deployment.md
docs/technical/frontend-modernization/: storybook-workflow.md  svg-icon-system.md
files/: management_views.py  models.py  serializers.py  views.py
files/tests/: test_manage_media.py  test_media_forms.py  test_migrations.py  test_my_uploads.py  test_race_conditions.py
fixtures/: categories.json
frontend/: README.md  package-lock.json  package.json  svgo.config.mjs  vite.config.js  vitest.config.js
frontend/.storybook/: main.mjs  manager.mjs  preview.mjs
frontend/src/components/: storybook-preview.scss
frontend/src/components/Button/: Button.jsx  Button.stories.jsx  Button.test.jsx
frontend/src/entries/: media-revamp.js
frontend/src/features/home/components/: HomePage.jsx
frontend/src/features/layout/components/: AppLayout.jsx  AppLayout.scss  AppLayout.test.jsx  RippleDecoration.jsx
frontend/src/features/notifications/components/: NotificationDialog.jsx  NotificationDialog.stories.jsx  NotificationDialog.test.jsx  NotificationDropdown.jsx  NotificationItem.stories.jsx
frontend/src/features/shared/components/: Icon.jsx  iconRegistry.js  index.js  storybook-preview.scss
frontend/src/features/shared/components/Avatar/: Avatar.jsx  Avatar.stories.jsx  Avatar.test.jsx
frontend/src/features/shared/components/Badge/: Badge.jsx  Badge.stories.jsx  Badge.test.jsx
frontend/src/features/shared/components/Button/: Button.jsx  Button.stories.jsx  Button.test.jsx
frontend/src/features/shared/components/CheckboxButton/: CheckboxButton.jsx  CheckboxButton.stories.jsx  CheckboxButton.test.jsx
frontend/src/features/shared/components/ConfirmationDialog/: ConfirmationDialogContent.jsx  ConfirmationDialogContent.stories.jsx  ConfirmationDialogContent.test.jsx  index.js
frontend/src/features/shared/components/Dialog/: Dialog.jsx  Dialog.stories.jsx  Dialog.test.jsx  index.js
frontend/src/features/shared/components/Dropdown/: Dropdown.jsx  Dropdown.stories.jsx  Dropdown.test.jsx
frontend/src/features/shared/components/EditorField/: EditorField.jsx  EditorField.stories.jsx  EditorField.test.jsx  index.js
frontend/src/features/shared/components/FollowButton/: FollowButton.jsx  FollowButton.stories.jsx  FollowButton.test.jsx
frontend/src/features/shared/components/GetNotifiedButton/: GetNotifiedButton.jsx  GetNotifiedButton.stories.jsx  GetNotifiedButton.test.jsx  index.js
frontend/src/features/shared/components/Icon/: Icon.jsx  Icon.stories.jsx  Icon.test.jsx  iconRegistry.js  index.js
frontend/src/features/shared/components/MediaDropzone/: MediaDropzone.jsx  MediaDropzone.stories.jsx  MediaDropzone.test.jsx  index.js
frontend/src/features/shared/components/MovieItem/: MovieItem.jsx  MovieItem.stories.jsx  MovieItem.test.jsx  index.js
frontend/src/features/shared/components/ProgressBar/: ProgressBar.jsx  ProgressBar.stories.jsx  ProgressBar.test.jsx
frontend/src/features/shared/components/RadioButton/: RadioButton.jsx  RadioButton.stories.jsx  RadioButton.test.jsx
frontend/src/features/shared/components/SearchBar/: SearchBar.jsx  SearchBar.stories.jsx  SearchBar.test.jsx
frontend/src/features/shared/components/SegmentButton/: SegmentButton.jsx  SegmentButton.stories.jsx  SegmentButton.test.jsx  index.js
frontend/src/features/shared/components/SquareImage/: SquareImage.jsx  SquareImage.stories.jsx  SquareImage.test.jsx
frontend/src/features/shared/components/Stepper/: Stepper.jsx  Stepper.stories.jsx  Stepper.test.jsx
frontend/src/features/shared/components/Switch/: Switch.jsx  Switch.stories.jsx  Switch.test.jsx
frontend/src/features/shared/components/TabView/: TabView.jsx  TabView.stories.jsx  TabView.test.jsx  index.js
frontend/src/features/shared/components/TextAlert/: TextAlert.jsx  TextAlert.stories.jsx  TextAlert.test.jsx  index.js
frontend/src/features/shared/components/TextField/: TextField.jsx  TextField.stories.jsx  TextField.test.jsx
frontend/src/features/shared/components/Tooltip/: Tooltip.jsx  Tooltip.stories.jsx  Tooltip.test.jsx
frontend/src/features/shared/components/__tests__/: Icon.test.jsx
frontend/src/features/video-viewer/: index.js
frontend/src/features/video-viewer/components/: VideoViewerPage.jsx
frontend/src/static/css/: tailwind.css
frontend/src/static/css/includes/form_controls/: _mixins_form_controls.scss
frontend/src/static/js/: _helpers.js  _helpers.test.js
frontend/src/static/js/components/-NEW-/: Comments.js  ManageMediaFilters.js  VideoPlayer.js
frontend/src/static/js/components/styles/: ManageItemList-filters.scss  ManageItemList.scss
frontend/src/static/js/functions/: addPageMetadata.js
frontend/src/static/js/pages/ManageUploadsPage/: ManageUploadsPage.scss  index.jsx
frontend/src/static/js/stores/: LayoutStore.js  ThemeStore.js
frontend/src/storybook/: Guide.mdx  Introduction.mdx
scripts/: build_frontend.sh
templates/: base_modern.html
templates/cms/: index_revamp.html  media_revamp.html
tests/: test_ui_variant.py
(+8 files in other folders)
